# universal

./: '  Cargo.toml  example.rb  example.star  example.wasm  example.wast  factorial.star  history.txt  language_definition.md  readme.md  sample.star  std.star  test.star  test.wast  tinyalloc.wast
src/: ast.rs  compiler.rs  lib.rs  main.rs  repl.rs  universal.pest  utils.rs  wasm.rs
