[package]
name = "universal"
version = "0.1.0"
authors = ["Steven Barragán <me@steven.mx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
indexmap = "1.6.2"
pest = "2.1"
pest_derive = "2.1"
rustyline = "6.3.0"
rustyline-derive = "0.2.0"
"wasi-cap-std-sync" = "0.25.0"
wasmtime = "0.25.0"
wasmtime-wasi = "0.25.0"
wat = "1.0.36"
